Finish tab first version

--- a/tab/index.html
+++ b/tab/index.html
@@ -7,5 +7,55 @@
         <link rel="stylesheet" href="./css/style.css" />
         <title>Tab</title>
     </head>
-    <body></body>
+    <body>
+        <!-- Tab-links -->
+        <div class="tab">
+            <button class="tab-links" onclick="openClick(event, 'London')">
+                London
+            </button>
+            <button class="tab-links" onclick="openClick(event, 'Paris')">
+                Paris
+            </button>
+            <button class="tab-links" onclick="openClick(event, 'Tokyo')">
+                Tokyo
+            </button>
+        </div>
+        <!-- Tab content -->
+        <div id="London" class="tabcontent">
+            <h3>London</h3>
+            <p>London is the capital city of England.</p>
+        </div>
+        <div id="Paris" class="tabcontent">
+            <h3>Paris</h3>
+            <p>Paris is the capital of France.</p>
+        </div>
+        <div id="Tokyo" class="tabcontent">
+            <h3>Tokyo</h3>
+            <p>Tokyo is the capital of Japan.</p>
+        </div>
+        <script>
+            const $ = document.querySelector.bind(document);
+            const $$ = document.querySelectorAll.bind(document);
+
+            var openClick = (event, cityName) => {
+                var i, tabcontent, tablinks;
+
+                tabcontent = $$(".tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tabcontent[i].style.display = "none";
+                }
+
+                tablinks = $$(".tab-links");
+                for (i = 0; i < tabcontent.length; i++) {
+                    tablinks[i].className = tablinks[i].className.replace(
+                        " active",
+                        ""
+                    );
+                }
+
+                $(`#${cityName}`).style.display = "block";
+                event.currentTarget.className += " active";
+            };
+        </script>
+    </body>
 </html>
